--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -763,6 +763,29 @@
                     <td class="winning" id="lbw">10</td>
     
                     <!-- machine-->
+                    <td class="machine" id="fbm">56</td>
+                    <td class="machine">44</td>
+                    <td class="machine">4</td>
+                    <td class="machine">85</td>
+                    <td class="machine" id="lbm">83</td>
+                </tr>
+            </tbody> 
+
+
+                                    <!-- day20-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">19</td>
+                    <td class="days"><small></small></td>
+                
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+
+                    <!-- machine-->
                     <td class="machine" id="fbm"></td>
                     <td class="machine"></td>
                     <td class="machine"></td>
@@ -770,6 +793,7 @@
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody> 
+
         </table>
         <span>MSP</span>
     </main>
