--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 05/5/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">25 - 1 - 80 - 9 - 87</p>
-                <p class="machine">61 - 55 - 89 - 35 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">90 - 85 - 36 - 21 - 66</p>
-                <p class="machine">2 - 64 - 12 - 69 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">39 - 2 - 45 - 90 - 74</p>
-                <p class="machine">43 - 6 - 44 - 1 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">86 - 78 - 23 - 56 - 36</p>
-                <p class="machine">87 - 79 - 16 - 22 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">29 - 72 - 85 - 30 - 2</p>
-                <p class="machine">63 - 21 - 11 - 74 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">73 - 77 - 68 - 90 - 31</p>
-                <p class="machine">16 - 36 - 38 - 82 - 65</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 06/5/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">36 - 50 - 20 - 29 - 10</p>
-                <p class="machine"></p>        
+                <p class="machine">56 - 44 - 4 - 85 - 83</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">11 - 24 - 75 - 21 - 42</p>
                 <p class="machine">38 - 69 - 8 - 29 - 35</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 7/05/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">66 - 80 - 15 - 22 - 49</p>
+                <p class="machine">44 - 88 - 76 - 68 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">78 - 65 - 43 - 64 - 50</p>
+                <p class="machine">17 - 74 - 42 - 45 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">16 - 12 - 3 - 32 - 73</p>
+                <p class="machine">45 - 1 - 4 - 85 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">61 - 38 - 16 - 31 - 73</p>
+                <p class="machine">50 - 69 - 30 - 79 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky-g</h3>
+                <p class="winning">33 - 46 - 23 - 34 - 1</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">8 - 30 - 52 - 64 - 61</p>
+                <p class="machine">21 - 49 - 89 - 88 - 86</p>        
             </article>
         </section>
     </div>
