--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -765,11 +765,11 @@
                     <td class="winning" id="lbw">1</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">6</td>
+                    <td class="machine">74</td>
+                    <td class="machine">39</td>
+                    <td class="machine">71</td>
+                    <td class="machine" id="lbm">65</td>
                 </tr>
             </tbody> 
 
