--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -1413,24 +1413,24 @@
             </tbody> 
 
                                     <!-- day36-->
-            <tbody>
+            <tbody style="background-color: beige;">
                 <tr>
                     <td class="serial-num">36</td>
                     <td class="days"><small>May 3rd fri</small></td>
                 
                     <!-- winning-->
-                    <td class="winning">54</td>
-                    <td class="winning">9</td>
-                    <td class="winning">21</td>
-                    <td class="winning">68</td>
-                    <td class="winning" id="lbw">61</td>
+                    <td class="winning">62</td>
+                    <td class="winning">41</td>
+                    <td class="winning">6</td>
+                    <td class="winning">72</td>
+                    <td class="winning" id="lbw">58</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">41</td>
-                    <td class="machine">5</td>
-                    <td class="machine">53</td>
-                    <td class="machine">70</td>
-                    <td class="machine" id="lbm">45</td>
+                    <td class="machine" id="fbm">74</td>
+                    <td class="machine">20</td>
+                    <td class="machine">31</td>
+                    <td class="machine">78</td>
+                    <td class="machine" id="lbm">61</td>
                 </tr>
             </tbody> 
 
