--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -256,7 +256,7 @@
             <article>
                 <h3 class="game">Lucky-g</h3>
                 <p class="winning">33 - 46 - 23 - 34 - 1</p>
-                <p class="machine"></p>        
+                <p class="machine">6 - 74 - 39 - 71 - 65</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
