--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 06/5/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">58 - 24 - 72 - 51 - 74</p>
-                <p class="machine">10 - 36 - 83 - 31 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">24 - 63 - 56 - 88 - 25</p>
-                <p class="machine">19 - 3 - 27 - 62 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">60 - 27 - 59 - 12 - 81</p>
-                <p class="machine">89 - 16 - 42 - 22 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">62 - 46 - 60 - 14 - 75</p>
-                <p class="machine">63 - 79 - 58 - 8 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">36 - 50 - 20 - 29 - 10</p>
-                <p class="machine">56 - 44 - 4 - 85 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">11 - 24 - 75 - 21 - 42</p>
-                <p class="machine">38 - 69 - 8 - 29 - 35</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 7/05/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">8 - 30 - 52 - 64 - 61</p>
                 <p class="machine">21 - 49 - 89 - 88 - 86</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 08/05/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">39 - 51 - 54 - 17 - 64</p>
+                <p class="machine">49 - 36 - 44 - 83 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">40 - 87 - 83 - 85 - 71</p>
+                <p class="machine">16 - 74 - 11 - 59 - 4</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">12 - 60 - 44 - 21 - 29</p>
+                <p class="machine">79 - 85 - 14 - 36 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
