--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">79 - 85 - 14 - 36 - 1</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">73 - 10 - 2 - 18 - 75</p>
+                <p class="machine">3 - 74 - 28 - 30 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">51 - 77 - 46 - 87 - 47</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">43 - 9 - 65 - 27 - 24</p>
+                <p class="machine">25 - 81 - 21 - 22 - 66</p>        
             </article>
         </section>
     </div>
