--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="./GAMES/viewStyle.css">
+        <link rel="stylesheet" href="./style-folder/carry1st.css">
         <!-- <link rel="stylesheet" href="/review-and-demo.css"> -->
 
 
@@ -91,18 +92,44 @@
                 </div> 
             </nav>
         </header>
-        <!-- <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
+        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
             <aside class="review" style="text-align: center; line-height: 1.5;" >
                 <h1>Review</h1>
-                <p style="font-size: 20px;">Kindly take few seconds of your time to rate our content</p>
+                <p style="font-size: 18px;">Kindly take few seconds of your time to rate our content</p>
                 <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
             </aside>
-        </div> -->
+        </div>
 
         <!-- <div id="demo-passage">
             <iframe src="/demo-and-review.html" scrolling="no" id="that" style="text-align: center;"></iframe>
 
         </div> -->
+
+                                <!-- carry1st -->
+        <div class="carry1st">
+            <h1>Carry1st</h1>
+            <p>Easiet way to make payment for your favourite entertaining products</p>
+            <div class="carry-span">
+                <span class="carry-p">- Call of Duty</span>
+                <span class="carry-p">- EA Sport Fc</span>
+                <span  class="carry-p">- Gems Game</span>
+                <span  class="carry-p">- Gift Card</span>
+                <span  class="carry-p">- and many more</span>
+            </div>
+            <div class="product-images">
+                <img src="https://i.postimg.cc/1tmw0th6/Call-of-Duty-caec507c-19a5-421d-be85-f5cde61c9950.png">
+                <img src="https://i.postimg.cc/gjjDKVBF/EA-Sport-FC-wit-c38c158f-38c7-46cd-b866-99d9ccc4cc6c.png">
+                <img src="https://i.postimg.cc/fyPvqV63/Gems-game-7e72d703-45d7-41d2-ab7e-6c9576d6845d.png">
+                <img src="https://i.postimg.cc/76K7KkwR/Call-of-Duty-e7155b0e-14ef-44db-8826-c4f824bd1047.png" alt="Product Image 2">
+                <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/giftcard-unselect-2020-family?wid=4000&hei=3836&fmt=jpeg&qlt=90&.v=1653339384459">
+            </div>
+            <!-- <div>
+                <h1>Benefit</h1>
+                <span>Cheap Rate</span><br>
+                <span>Fast and secure payment</span>
+            </div> -->
+            <a href="https://shop.carry1st.com/" target="_blank" class="carry1st-link">Subscribe</a>
+        </div>
 
        
         <a href="#" id="top" aria-label="scroll up"><i class="fa-solid fa-arrow-up"></i></a>
@@ -252,6 +279,7 @@
         </footer>
         <!-- <script src="/Scripts/loading.js"></script> -->
         <!-- <script src="script.js"></script> -->
+        <script src="/Scripts/carry1st.js"></script>
     </body>
 </html>
         
