--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -764,11 +764,11 @@
                     <td class="winning" id="lbw">47</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">44</td>
+                    <td class="machine">50</td>
+                    <td class="machine">5</td>
+                    <td class="machine">78</td>
+                    <td class="machine" id="lbm">45</td>
                 </tr>
             </tbody> 
 
