--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 7/05/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">66 - 80 - 15 - 22 - 49</p>
-                <p class="machine">44 - 88 - 76 - 68 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">78 - 65 - 43 - 64 - 50</p>
-                <p class="machine">17 - 74 - 42 - 45 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">16 - 12 - 3 - 32 - 73</p>
-                <p class="machine">45 - 1 - 4 - 85 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">61 - 38 - 16 - 31 - 73</p>
-                <p class="machine">50 - 69 - 30 - 79 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky-g</h3>
-                <p class="winning">33 - 46 - 23 - 34 - 1</p>
-                <p class="machine">6 - 74 - 39 - 71 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">8 - 30 - 52 - 64 - 61</p>
-                <p class="machine">21 - 49 - 89 - 88 - 86</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 08/05/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">51 - 77 - 46 - 87 - 47</p>
-                <p class="machine"></p>        
+                <p class="machine">44 - 50 - 5 - 78 - 45</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">43 - 9 - 65 - 27 - 24</p>
                 <p class="machine">25 - 81 - 21 - 22 - 66</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 09/05/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">65 - 37 - 33 - 45 - 3</p>
+                <p class="machine">42 - 85 - 64 - 10 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">77 - 41 - 12 - 60 - 54</p>
+                <p class="machine">2 - 36 - 71 - 44 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">6 - 54 - 33 - 87 - 24</p>
+                <p class="machine">89 - 14 - 22 - 23 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">17 - 24 - 77 - 4 - 49</p>
+                <p class="machine">35 - 6 - 19 - 85 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">3 - 84 - 40 - 32 - 18</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">15 - 5 - 52 - 61 - 81</p>
+                <p class="machine">75 - 13 - 40 - 90 - 51</p>        
             </article>
         </section>
     </div>
