--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <!-- carry1st -->
         <div class="carry1st">
             <h1>Carry1st</h1>
-            <p>Easiet way to make payment for your favourite entertaining products</p>
+            <p>Easiest way to make payment for your favourite entertaining products</p>
             <div class="carry-span">
                 <span class="carry-p">- Call of Duty</span>
                 <span class="carry-p">- EA Sport Fc</span>
