--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 08/05/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">39 - 51 - 54 - 17 - 64</p>
-                <p class="machine">49 - 36 - 44 - 83 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">40 - 87 - 83 - 85 - 71</p>
-                <p class="machine">16 - 74 - 11 - 59 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">12 - 60 - 44 - 21 - 29</p>
-                <p class="machine">79 - 85 - 14 - 36 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">73 - 10 - 2 - 18 - 75</p>
-                <p class="machine">3 - 74 - 28 - 30 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">51 - 77 - 46 - 87 - 47</p>
-                <p class="machine">44 - 50 - 5 - 78 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">43 - 9 - 65 - 27 - 24</p>
-                <p class="machine">25 - 81 - 21 - 22 - 66</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 09/05/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">15 - 5 - 52 - 61 - 81</p>
                 <p class="machine">75 - 13 - 40 - 90 - 51</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 10/05/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">58 - 67 - 71 - 60 - 12</p>
+                <p class="machine">38 - 41 - 52 - 57 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">85 - 31 - 82 - 10 - 45</p>
+                <p class="machine">46 - 64 - 88 - 40 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">73 - 64 - 24 - 63 - 28</p>
+                <p class="machine">45 - 89 - 47 - 13 - 61</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">6 - 57 - 28 - 29 - 10</p>
+                <p class="machine">86 - 60 - 45 - 11 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">35 - 75 - 77 - 3 - 86</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">51 - 66 - 21 - 25 - 55</p>
+                <p class="machine">22 - 58 - 83 - 18 - 71</p>        
             </article>
         </section>
     </div>
