--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div> -->
 
                                 <!-- carry1st -->
-        <div class="carry1st">
+        <!-- <div class="carry1st">
             <h1>Carry1st</h1>
             <p>Easiest way to make payment for your favourite entertaining products</p>
             <div class="carry-span">
@@ -122,14 +122,15 @@
                 <img src="https://i.postimg.cc/fyPvqV63/Gems-game-7e72d703-45d7-41d2-ab7e-6c9576d6845d.png">
                 <img src="https://i.postimg.cc/76K7KkwR/Call-of-Duty-e7155b0e-14ef-44db-8826-c4f824bd1047.png" alt="Product Image 2">
                 <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/giftcard-unselect-2020-family?wid=4000&hei=3836&fmt=jpeg&qlt=90&.v=1653339384459">
-            </div>
+            </div> -->
             <!-- <div>
                 <h1>Benefit</h1>
                 <span>Cheap Rate</span><br>
                 <span>Fast and secure payment</span>
             </div> -->
-            <a href="https://shop.carry1st.com/" target="_blank" class="carry1st-link">Subscribe</a>
-        </div>
+            <!-- <a href="https://shop.carry1st.com/" target="_blank" class="carry1st-link">Subscribe</a>
+        </div> -->                                    <!-- carry1st ends-->
+
 
        
         <a href="#" id="top" aria-label="scroll up"><i class="fa-solid fa-arrow-up"></i></a>
