--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -748,14 +748,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">19</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>May 10th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">35</td>
+                    <td class="winning">75</td>
+                    <td class="winning">77</td>
+                    <td class="winning">3</td>
+                    <td class="winning" id="lbw">86</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
