--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 09/05/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">65 - 37 - 33 - 45 - 3</p>
-                <p class="machine">42 - 85 - 64 - 10 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">77 - 41 - 12 - 60 - 54</p>
-                <p class="machine">2 - 36 - 71 - 44 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">6 - 54 - 33 - 87 - 24</p>
-                <p class="machine">89 - 14 - 22 - 23 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">17 - 24 - 77 - 4 - 49</p>
-                <p class="machine">35 - 6 - 19 - 85 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">3 - 84 - 40 - 32 - 18</p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">15 - 5 - 52 - 61 - 81</p>
-                <p class="machine">75 - 13 - 40 - 90 - 51</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 10/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">35 - 75 - 77 - 3 - 86</p>
-                <p class="machine"></p>        
+                <p class="machine">89 - 9 - 47 - 76 - 28</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">51 - 66 - 21 - 25 - 55</p>
                 <p class="machine">22 - 58 - 83 - 18 - 71</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 11/05/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">56 - 30 - 83 - 32 - 55</p>
+                <p class="machine">15 - 31 - 42 - 28 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">14 - 47 - 65 - 59 - 27</p>
+                <p class="machine">11 - 33 - 19 - 13 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">40 - 69 - 32 - 65 - 60</p>
+                <p class="machine">11 - 5 - 59 - 8 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">32 - 81 - 34 - 48 - 69</p>
+                <p class="machine">25 - 15 - 70 - 68 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">74 - 43 - 6 - 44 - 20</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">45 - 83 - 70 - 30 - 76</p>
+                <p class="machine">14 - 37 - 18 - 28 - 50</p>        
             </article>
         </section>
     </div>
