--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -764,11 +764,11 @@
                     <td class="winning" id="lbw">18</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">83</td>
+                    <td class="machine">41</td>
+                    <td class="machine">8</td>
+                    <td class="machine">4</td>
+                    <td class="machine" id="lbm">57</td>
                 </tr>
             </tbody>
             
