--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -757,11 +757,11 @@
                     <td class="winning" id="lbw">20</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">47</td>
+                    <td class="machine">11</td>
+                    <td class="machine">42</td>
+                    <td class="machine" id="lbm">29</td>
                 </tr>
             </tbody> 
 
