--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -256,12 +256,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">74 - 43 - 6 - 44 - 20</p>
-                <p class="machine"></p>        
+                <p class="machine">55 - 47 - 11 - 42 - 29</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">45 - 83 - 70 - 30 - 76</p>
                 <p class="machine">14 - 37 - 18 - 28 - 50</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 12/05/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">79 - 40 - 1 - 49 - 42</p>
+                <p class="machine">45 - 14 - 5 - 77 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">47 - 21 - 28 - 42 - 68</p>
+                <p class="machine">1 - 36 - 58 - 16 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">71 - 88 - 32 - 22 - 64</p>
+                <p class="machine">19 - 39 - 51 - 84 - 53</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">32 - 38 - 45 - 67 - 90</p>
+                <p class="machine">35 - 78 - 21 - 43 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">58 - 13 - 74 - 43 - 18</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">tota</h3>
+                <p class="winning">67 - 79 - 81 - 59 - 28</p>
+                <p class="machine">9 - 22 - 3 - 64 - 72</p>        
             </article>
         </section>
     </div>
