--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -776,6 +776,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">20</td>
+                    <td class="days"><small>May 13th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">76</td>
+                    <td class="winning">26</td>
+                    <td class="winning">41</td>
+                    <td class="winning">33</td>
+                    <td class="winning" id="lbw">39</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day21-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">21</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
