--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,74 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 10/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">58 - 67 - 71 - 60 - 12</p>
-                <p class="machine">38 - 41 - 52 - 57 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">85 - 31 - 82 - 10 - 45</p>
-                <p class="machine">46 - 64 - 88 - 40 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">73 - 64 - 24 - 63 - 28</p>
-                <p class="machine">45 - 89 - 47 - 13 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">6 - 57 - 28 - 29 - 10</p>
-                <p class="machine">86 - 60 - 45 - 11 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">35 - 75 - 77 - 3 - 86</p>
-                <p class="machine">89 - 9 - 47 - 76 - 28</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">51 - 66 - 21 - 25 - 55</p>
-                <p class="machine">22 - 58 - 83 - 18 - 71</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
-            <h2 class="date">saturday 11/05/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">56 - 30 - 83 - 32 - 55</p>
-                <p class="machine">15 - 31 - 42 - 28 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">14 - 47 - 65 - 59 - 27</p>
-                <p class="machine">11 - 33 - 19 - 13 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">40 - 69 - 32 - 65 - 60</p>
-                <p class="machine">11 - 5 - 59 - 8 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">32 - 81 - 34 - 48 - 69</p>
-                <p class="machine">25 - 15 - 70 - 68 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">74 - 43 - 6 - 44 - 20</p>
-                <p class="machine">55 - 47 - 11 - 42 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">45 - 83 - 70 - 30 - 76</p>
-                <p class="machine">14 - 37 - 18 - 28 - 50</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 12/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -296,6 +228,40 @@
                 <h3 class="game">tota</h3>
                 <p class="winning">67 - 79 - 81 - 59 - 28</p>
                 <p class="machine">9 - 22 - 3 - 64 - 72</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 13/05/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">61 - 18 - 44 - 72 - 10</p>
+                <p class="machine">75 - 20 - 39 - 6 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">86 - 85 - 24 - 70 - 38</p>
+                <p class="machine">46 - 44 - 48 - 37 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">47 - 29 - 31 - 30 - 49</p>
+                <p class="machine">12 - 80 - 27 - 75 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">58 - 87 - 50 - 37 - 40</p>
+                <p class="machine">1 - 21 - 15 - 10 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">76 - 26 - 41 - 33 - 39</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">2 - 35 - 80 - 60 - 4</p>
+                <p class="machine">87 - 50 - 39 - 8 - 40</p>        
             </article>
         </section>
     </div>
