--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 12/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">79 - 40 - 1 - 49 - 42</p>
-                <p class="machine">45 - 14 - 5 - 77 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">47 - 21 - 28 - 42 - 68</p>
-                <p class="machine">1 - 36 - 58 - 16 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">71 - 88 - 32 - 22 - 64</p>
-                <p class="machine">19 - 39 - 51 - 84 - 53</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">32 - 38 - 45 - 67 - 90</p>
-                <p class="machine">35 - 78 - 21 - 43 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">58 - 13 - 74 - 43 - 18</p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game">tota</h3>
-                <p class="winning">67 - 79 - 81 - 59 - 28</p>
-                <p class="machine">9 - 22 - 3 - 64 - 72</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 13/05/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">76 - 26 - 41 - 33 - 39</p>
-                <p class="machine"></p>        
+                <p class="machine">24 - 21 - 68 - 51 - 34</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">2 - 35 - 80 - 60 - 4</p>
                 <p class="machine">87 - 50 - 39 - 8 - 40</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 14/05/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">57 - 32 - 30 - 37 - 13</p>
+                <p class="machine">48 - 1 - 56 - 25 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">30 - 87 - 37 - 48 - 85</p>
+                <p class="machine">41 - 63 - 13 - 28 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">30 - 50 - 69 - 38 - 80</p>
+                <p class="machine">62 - 66 - 15 - 88 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
