--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -786,11 +786,11 @@
                     <td class="winning" id="lbw">39</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">21</td>
+                    <td class="machine">68</td>
+                    <td class="machine">51</td>
+                    <td class="machine" id="lbm">34</td>
                 </tr>
             </tbody> 
 
