--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -776,11 +776,11 @@
                     <td class="winning" id="lbw">18</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">10</td>
+                    <td class="machine">41</td>
+                    <td class="machine">39</td>
+                    <td class="machine">69</td>
+                    <td class="machine" id="lbm">68</td>
                 </tr>
             </tbody> 
 
