--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -777,6 +777,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">20</td>
+                    <td class="days"><small>May 14th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">66</td>
+                    <td class="winning">22</td>
+                    <td class="winning">65</td>
+                    <td class="winning">7</td>
+                    <td class="winning" id="lbw">34</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day21-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">21</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
