--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">62 - 66 - 15 - 88 - 64</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">29 - 80 - 13 - 68 - 83</p>
+                <p class="machine">39 - 26 - 9 - 7 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">lucky G</h3>
+                <p class="winning">66 - 22 - 65 - 7 - 34</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">73 - 34 - 69 - 49 - 58</p>
+                <p class="machine">47 - 54 - 6 - 5 - 50</p>        
             </article>
         </section>
     </div>
